syntax = "proto3";

message DevModeRequest {
  string service
}


message DevModeResponse {
  enum Status {
    UNKNOWN = 0;
    NOT_SERVING = 1;
    TEST_ONE = 2;
  }
  Status status = 1;
}
